--- a/.gitignore
+++ b/.gitignore
@@ -8,6 +8,8 @@ __pycache__/
 
 # Distribution / packaging
 .Python
+selenium
+bin/
 build/
 develop-eggs/
 dist/
@@ -74,6 +76,8 @@ target/
 
 # pyenv
 .python-version
+pip-selfcheck.json
+
 
 # celery beat schedule file
 celerybeat-schedule
