--- a/server/src/requirements.txt
+++ b/server/src/requirements.txt
@@ -3,12 +3,15 @@ amqp==2.3.2
 AoikLiveReload==0.1.0
 argh==0.26.2
 billiard==3.5.0.3
-celery==4.2.0
+gevent==1.3.4
+greenlet==0.4.13
 httptools==0.0.11
+huey==1.10.0
 kombu==4.2.1
 pathtools==0.1.2
 pytz==2018.5
 PyYAML==4.1
+redis==2.10.6
 sanic==0.7.0
 Sanic-Cors==0.9.4
 Sanic-Plugins-Framework==0.6.2.dev20180617
